# differentiable-fortran

./: .gitignore  CMakeLists.txt  NOTICE  README.md  THIRD_PARTY.md  fpm.toml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: plot.py  reproduce-reference.sh  run.py
benchmark/results/reference/: accuracy.csv  manifest.json  timings.csv  toolchains.csv
contract/: heat_step.h
docs/: benchmark-method.md  contract.md  decision-guide.md  limitations.md  solutions.md  toolchains.md
python/differentiable_fortran/: __init__.py  autograd_native.py  jax_native.py  native.py  reference.py  torch_native.py
solutions/analytic-fortran/: README.md
solutions/autograd-native/: README.md
solutions/cython/: README.md  build.sh  heat_step.pyx  setup.py  smoke.py
solutions/f90wrap/: README.md  build.sh  kind_map  smoke.py
solutions/flang-enzyme/: README.md
solutions/iso-c-ctypes/: README.md
solutions/jax-ffi/: README.md  build.sh  handler.cc  heat_step_ffi.py  smoke.py
solutions/jax-native/: README.md
solutions/lfortran-enzyme/: README.md
solutions/numpy-ufunc/: README.md  build.sh  heat_ufunc.pyx  setup.py  smoke.py
solutions/pytorch-custom-op/: README.md  build.sh  heat_step_operator.py  operator.cpp  setup.py  smoke.py
solutions/pytorch-native/: README.md
solutions/scipy-lowlevel/: README.md  example.py
solutions/tesseract/: README.md  build_enzyme.sh  smoke.py  tesseract_api.py  tesseract_config.yaml
src/fortran/: gaussian_integrand.f90  heat_model.f90  heat_step_analytic.f90  heat_step_primal.f90
studies/enzyme-readme/: README.md  build.sh  jax_kernels.py  plot.py  reproduce.sh  run.py
studies/enzyme-readme/results/reference/: accuracy.csv  manifest.json  timings.csv
studies/enzyme-readme/source/: enzyme_wrapper.c  kernels.cpp  kernels.f90
test/fortran/: test_analytic.f90
test/python/: test_frameworks.py  test_native.py  test_reference.py
toolchains/enzyme/: enzyme_wrapper.c  heat_step_kernel.f90  smoke.c
toolchains/flang-enzyme/: build.sh
toolchains/lfortran-enzyme/: build.sh
